文章列表項目，新增「字卡」排版

--- a/partial/_post-item.html.slim
+++ b/partial/_post-item.html.slim
@@ -35,7 +35,7 @@
         a.post-event-btn.btn.btn_primary 前往活動報名頁
 
   - 2.times do |i|
-    .post-item
+    .post-item.post-item_wordcard
       a.post-image href="/posts/single-post-page.html"
         .post-image-inner.lazyload data-bg="/images/post-2.jpg"
       .post-content-wrap
