--- a/sass/all.scss
+++ b/sass/all.scss
@@ -42,7 +42,7 @@
 
 // ==== page ====
 @import "page/homepage";
-@import "page/policy-page";
+@import "page/policies-page";
 @import "page/article-page";
 
 // ==== inbox ====
