--- a/sass/page/policies-page/_base.sass
+++ b/sass/page/policies-page/_base.sass
@@ -46,6 +46,29 @@ ul, ol
   &.gray-block
     background-color: #EFEFEF
 
+  &.image-theme
+    position: relative
+    +padding-leader(8)
+    color: white
+    background-color: black
+    background-position: top center
+    background-repeat: no-repeat
+    +background-size(contain)
+
+    & *
+      position: relative
+      z-index: 10
+
+    &:after
+      content: ''
+      position: absolute
+      top: 0
+      left: 0
+      right: 0
+      bottom: 0
+      +background(linear-gradient(to bottom, rgba(10,10,10,0) 0%, rgba(10,10,10,1) 15%))
+
+
 +at-breakpoint($pad)
   p
     +adjust-font-size-to(15px)
@@ -59,6 +82,12 @@ ul, ol
   .section
     +padding-leader(3.5)
     +padding-trailer(3.5)
+
+    &.image-theme
+      +padding-leader(14)
+
+      &:after
+        +background(linear-gradient(to bottom, rgba(10,10,10,0) 0%, rgba(10,10,10,1) 25%))
 
 
 +at-breakpoint($desktop)
@@ -74,3 +103,9 @@ ul, ol
   .section
     +padding-leader(4)
     +padding-trailer(4)
+
+    &.image-theme
+      +padding-leader(20)
+
+      &:after
+        +background(linear-gradient(to bottom, rgba(10,10,10,0) 0%, rgba(10,10,10,1) 30%))
