--- a/sass/partial/_animation.sass
+++ b/sass/partial/_animation.sass
@@ -39,6 +39,15 @@
       opacity: 1
       +translateX(0%)
 
+  .rotate
+    opacity: 0
+    +rotate(-5deg)
+    +transition(transform .5s ease-in-out, opacity .75s ease-in-out)
+
+    &.is-active
+      opacity: 1
+      +rotate(0deg)
+
   // block method
   .animation.is-active
     .fade-in
@@ -51,6 +60,10 @@
     .slide-left, .slide-right
       opacity: 1
       +translateX(0%)
+
+    .rotate
+      opacity: 1
+      +rotate(0deg)
 
   // animation delay
   .delay-200ms
