--- a/sass/page/policies-page/_list.sass
+++ b/sass/page/policies-page/_list.sass
@@ -25,10 +25,8 @@
       line-height: 42px
       letter-spacing: -3px
       color: #50B584
-      background: linear-gradient(120deg, #E7E879, #50B584)
-      background-clip: text
+      background: -webkit-linear-gradient(120deg, #E7E879, #50B584)
       -webkit-background-clip: text
-      text-fill-color: transparent
       -webkit-text-fill-color: transparent
 
     & li
