--- a/_layout_foot.html.slim
+++ b/_layout_foot.html.slim
@@ -5,5 +5,5 @@
 /   "all"
 
 
-<script src="//use.typekit.net/qya7xgm.js"></script>
+<script src="https://use.typekit.net/mqf5nzx.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
