--- a/_layout_javascript.html.slim
+++ b/_layout_javascript.html.slim
@@ -5,3 +5,11 @@
   "/vendor/jquery.waypoints.min.js", \
   "/vendor/jquery.waypoints.sticky.min.js", \
   "all"
+
+/ 政策系列頁面專用
+- if @page_name == "policies-page"
+  = javascript_include_tag \
+    "/vendor/d3.min.js", \
+    "/vendor/prelude-browser-min.js", \
+    "barchart", \
+    "chartdata"
