image compress & add onload fade-in animation

--- a/policies/food-safely.html.slim
+++ b/policies/food-safely.html.slim
@@ -12,7 +12,7 @@
       li.scroll-spy-menu-item: a href="#section-4" 總結
   .policy-header style="background-image: url('/images/policies_image/food_safely/page_header_bg.jpg')"
     .header-title
-      .header-title-inner
+      .header-title-inner.onload-fadein
         ul.policy-category: li: a href="http://iing.tw/categories/政策" 政策
         h1.main-title 食安五環改革方案
         h2.main-sub-title 我們的食品安全嗎？
@@ -28,7 +28,7 @@
       a.post-tag href="http://iing.tw/tags/食品安全" 食品安全
 
   .section
-    blockquote.animation.slide-up
+    blockquote.onload-fadein
       p 食安管理的重點在於「安全」這兩個字，現代政府的責任，已經不只是要讓民眾「有得吃」而已，而是要建立從農場到餐桌的安全體系，讓民眾「吃得安心又安全」。
 
   .section-class.gray-block.scroll-spy-section#section-1 data-spy-index="1"
