--- a/policies/geriatric-care.html.slim
+++ b/policies/geriatric-care.html.slim
@@ -10,9 +10,9 @@
       li.scroll-spy-menu-item: a href="#section-2" 原因
       li.scroll-spy-menu-item: a href="#section-3" 政策
       li.scroll-spy-menu-item: a href="#section-4" 總結
-  .policy-header style="background-image: url('/images/policies_image/geriatric_care/geriatric_care_header.jpg')"
+  .policy-header style="background-image: url('/images/policies_image/geriatric_care/page_header_bg.jpg')"
     .header-title
-      .header-title-inner
+      .header-title-inner.onload-fadein
         ul.policy-category: li: a href="http://iing.tw/categories/政策" 政策
         h1.main-title 長照十年計畫 2.0 版
         h2.main-sub-title 有一天我們都會變老，誰會照顧我們？
@@ -28,7 +28,7 @@
       a.post-tag href="http://iing.tw/tags/長期照顧" 長期照顧
 
   .section
-    blockquote.animation.slide-up
+    blockquote.onload-fadein
       p 有過照顧經驗的人都知道，如果沒有很大的耐心和愛心，即使是最親近的家人，也會感到辛苦。在照顧過程中，不管是照顧者還是被照顧者，常常會處於一種精神上很緊張的狀態⋯⋯有一段時間我沒有工作，在家裡照顧媽媽，特別感受到這個問題的嚴重性，這是台灣許多家庭正在經歷的事情。作為一個政治人物，我的責任就是提出問題的解決方案。
 
   .section-class.gray-block.scroll-spy-section#section-1 data-spy-index="1"
@@ -50,7 +50,7 @@
   .section-class.gray-block.scroll-spy-section#section-2 data-spy-index="2"
     span.animation.fade-in 原因
 
-  .section.image-theme style="background-image: url('/images/policies_image/geriatric_care/geriatric_care_partial_bg_2.jpg')"
+  .section.image-theme style="background-image: url('/images/policies_image/geriatric_care/reason_bg.jpg')"
     .center-content
       .text-content
         h3.section-title 超高齡社會來臨<br><span class="dt-hide">，</span>社會保險即將破產
