--- a/sass/page/policies-page/_section-class.sass
+++ b/sass/page/policies-page/_section-class.sass
@@ -8,6 +8,7 @@
   letter-spacing: 7px
   text-align: center
   color: white
+  background-color: #50B584
   +background(linear-gradient(160deg, #E7E879, #50B584))
 
   +at-breakpoint($pad)
