--- a/sass/component/_back-to-top.scss
+++ b/sass/component/_back-to-top.scss
@@ -5,6 +5,7 @@
   display: block;
   visibility: hidden;
   position: fixed;
+  z-index: 100;
   bottom: -48px;
   margin-left: -48px;
   width: 48px;
