--- a/sass/partial/_animation.sass
+++ b/sass/partial/_animation.sass
@@ -1,4 +1,11 @@
 +at-breakpoint($pad)
+  .onload-fadein
+    opacity: 0
+    +transition(opacity .75s .5s ease-in-out)
+
+    &.is-active
+      opacity: 1
+
   // animation
   .animation
     position: relative
