改進 sass 中 url 連結

--- a/sass/page/policies-page/_list.sass
+++ b/sass/page/policies-page/_list.sass
@@ -58,8 +58,8 @@
   top: auto
   width: 36px
   height: 36px
-  background-image: url(/images/todo-item-style.png)
-  background-image: none, url(/images/todo-item-style.svg)
+  background-image: image-url('todo-item-style.png')
+  background-image: none, image-url('todo-item-style.svg')
   background-position: center
   background-repeat: no-repeat
   background-clip: initial
