只有在政策頁時使用 webfont

--- a/_layout_foot.html.slim
+++ b/_layout_foot.html.slim
@@ -4,6 +4,6 @@
 /   "/vendor/jquery.waypoints.sticky.min.js", \
 /   "all"
 
-
-<script src="https://use.typekit.net/mqf5nzx.js"></script>
-<script>try{Typekit.load({ async: true });}catch(e){}</script>
+- if @page_name == "policies-page"
+  <script src="https://use.typekit.net/mqf5nzx.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
