--- a/pages/show.html.slim
+++ b/pages/show.html.slim
@@ -7,7 +7,8 @@
   .post.post_bg-image-style
     .post-header
       .post-cover
-        .post-cover-inner style="background-image: url('/images/post-header-image.jpg')"
+        .post-cover-image.lazyload data-bg="/images/post-header-image.jpg"
+        .post-cover-inner
           h2.post-title.auto-break-text 小英的人生旅途
           h3.post-subtitle.auto-break-text 一段關於小英人生旅途的副標題
       .post-share
