--- a/policies/geriatric-care.html.slim
+++ b/policies/geriatric-care.html.slim
@@ -14,7 +14,7 @@
     .header-title
       .header-title-inner.onload-fadein
         ul.policy-category: li: a href="http://iing.tw/categories/政策" 政策
-        h1.main-title 長照十年計畫 2.0 版
+        h1.main-title 十年長照 2.0 計畫
         h2.main-sub-title 有一天我們都會變老，誰會照顧我們？
   .post
     .post-share
@@ -29,7 +29,7 @@
 
   .section
     blockquote.onload-fadein
-      p 有過照顧經驗的人都知道，如果沒有很大的耐心和愛心，即使是最親近的家人，也會感到辛苦。在照顧過程中，不管是照顧者還是被照顧者，常常會處於一種精神上很緊張的狀態⋯⋯有一段時間我沒有工作，在家裡照顧媽媽，特別感受到這個問題的嚴重性，這是台灣許多家庭正在經歷的事情。作為一個政治人物，我的責任就是提出問題的解決方案。
+      p 有過照顧經驗的人都知道，如果沒有很大的耐心，即使是最親近的家人，也會感到辛苦。長期照顧是台灣許多家庭正在面臨的負擔。作為一個政治人物，我的責任就是提出問題的解決方案。
 
   .section-class.gray-block.scroll-spy-section#section-1 data-spy-index="1"
     span.animation.fade-in 主張
@@ -38,7 +38,7 @@
     .center-content
       ol.text-content.order-list.animation
         li.fade-in
-          h4.section-sub-title 政府的責任：讓有需要照顧的人，能夠安心生活
+          h4.section-sub-title 政府責任：讓有需要照顧的人，能夠安心生活
           p 政府有責任建構完整的長期照顧體系，讓失能老人與身心功能障礙者能夠獲得適切的服務，讓有需要照顧的人，能夠安心生活。
         li.fade-in.delay-200ms
           h4.section-sub-title 在地老化：服務種類應多元與連續
@@ -76,7 +76,7 @@
 
   .section.white-block
     blockquote.bigtext.animation.slide-up
-      p 老人本身不是問題，只有當政府無法提出相關的政策時，老人才會變成問題。當「普遍照顧」成為社會政策的主流時，政府就必須改變過去殘補式的福利主張，要讓每一個人都享有基本的老幼照顧服務。
+      p 老人本身不是問題，政府的照顧政策失靈才是問題。政府不應該把照顧老人的責任留給家庭，應該讓每一個需要的人都享有基本的照顧服務。
     .blockquote-name.animation.slide-up 蔡英文
 
   .section
@@ -86,18 +86,18 @@
         .col-2-content.animation
           img.image.fade-in src="/images/policies_image/geriatric_care/gc2_1.png"
           .text-content.fade-in.delay-200ms
-            h4.section-sub-title 照護員人力不足
-            p 八年來政府所培訓的服務人力尚不足以因應所需，且服務人力的勞動條件未明訂，造成本勞受訓後嚴重流失。根據2014年衛福部、勞動部統計，本國照顧服務員在受訓後有80%並未投入照顧職場，總計8萬名勞工。現在僅有7000人投入居家照顧職場、13000人在長照機構服務，長期照顧員人力嚴重不足。
+            h4.section-sub-title 照顧員人力不足
+            p 八年來政府所培訓的服務人力尚不足以因應所需，且服務人力的勞動條件未明訂，造成本勞受訓後嚴重流失。根據2014年衛福部、勞動部統計，本國照顧服務員在受訓後有80%並未投入照顧職場，總計8萬名勞工。
         .col-2-content.animation
           img.image.fade-in.delay-400ms src="/images/policies_image/geriatric_care/gc2_2.png"
           .text-content.fade-in.delay-600ms
-            h4.section-sub-title 社區式照護服務嚴重不足
-            p 2014年4月，我國老年人長期照顧與安養機構（含榮民之家與護理之家）總床位為10萬3,879床，而供給超過需求3萬4237床。機構式照顧老年人占需求長期照顧老年人的19.5%，比率遠低於歐美國家機構式（30%）。大型機構的長照服務供過於求，顯示我國老年人並不偏愛機構式照顧，普及的社區式服務則嚴重不足。
+            h4.section-sub-title 社區式照顧服務嚴重不足
+            p 我國老年人長期照顧與安養機構（含榮民之家與護理之家）總床位為10萬3,879床，而供給超過需求3萬4237床。機構式照顧老年人占需求長期照顧老年人的19.5%，比率遠低於歐美國家機構式（30%）。機構式服務役已經足夠，普及的社區式服務則嚴重不足。
         .col-2-content.animation
           img.image.fade-in src="/images/policies_image/geriatric_care/gc2_3.png"
           .text-content.fade-in.delay-200ms
             h4.section-sub-title 政府預算編列不足、家庭負擔沈重
-            p 2015年依需求推估長照經費需110億元，但馬政府只編列48億元，在過去七年，長照經費更總共僅編列245億元，平均每年僅有35億，編列嚴重不足。在經費短缺下服務提供不足、不均，難以真正減輕家庭照顧負擔。
+            p 2015年依需求推估長照經費需110億元，但政府只編列48億元，在過去七年，長照經費更總共僅編列245億元，平均每年僅有35億，編列嚴重不足。在經費短缺下服務提供不足、不均，難以真正減輕家庭照顧負擔。
         .col-2-content.animation
           img.image.fade-in.delay-400ms src="/images/policies_image/geriatric_care/gc2_4.png"
           .text-content.fade-in.delay-600ms
@@ -109,17 +109,20 @@
 
   .section.white-block
     .multi-col-content
-      h3.section-title 長照 10 年計劃 2.0 版<br><span class="dt-hide">，</span>照顧每一個需要的人，我們的 3 帖處方
+      h3.section-title 十年長照計劃 2.0 版<br><span class="dt-hide">，</span>照顧每一個需要的人，我們的 3 帖處方
       h4.section-sub-title 普及的社區化長照服務
       .multi-col-content-inner.animation
         .col-3-content
           img.image.fade-in src="/images/policies_image/geriatric_care/gc3_1.png"
+          h4.section-sub-title.fade-in.delay-200ms 完整的長照體系
           p.fade-in.delay-200ms 建立完整的長期照顧體系，從支持家庭照顧者、到宅服務、居家護理、日間照顧、短期臨託、餐食服務、交通接送、團體家屋、機構式照顧等基礎建設完成。
         .col-3-content
           img.image.fade-in.delay-200ms src="/images/policies_image/geriatric_care/gc3_2.png"
+          h4.section-sub-title.fade-in.delay-400ms 社區健康照護團隊
           p.fade-in.delay-400ms 發展以社區為基礎的健康照護團隊，向前銜接預防保健，向後發展在宅臨終安寧照顧，以期壓縮疾病期間，減少長期照顧壓力。
         .col-3-content
           img.image.fade-in.delay-400ms src="/images/policies_image/geriatric_care/gc3_3.png"
+          h4.section-sub-title.fade-in.delay-600ms 社區型多機能整合服務中心
           p.fade-in.delay-600ms 積極發展以社區為基礎的小規模多機能整合型服務中心，提供在地老化的社區整體老人、身心障礙者的綜合照顧服務。
 
   .section
@@ -128,12 +131,15 @@
       .multi-col-content-inner.animation
         .col-3-content
           img.image.fade-in src="/images/policies_image/geriatric_care/gc4_1.png"
-          p.fade-in.delay-200ms 未來將編列充足的長照服務基金，每年編列330億元，未來因應需求增加，逐年提高財源數額，加速建置長照服務體系。
+          h4.section-sub-title.fade-in.delay-200ms 投入充足的長照預算
+          p.fade-in.delay-200ms 將編列充足的長照服務基金，每年編列330億元，未來因應需求增加，逐年提高財源數額，加速建置長照服務體系。
         .col-3-content
           img.image.fade-in.delay-200ms src="/images/policies_image/geriatric_care/gc4_2.png"
+          h4.section-sub-title.fade-in.delay-400ms 依特殊狀況給予長照補助
           p.fade-in.delay-400ms 讓每一個需要的人都受到照顧，依家庭經濟狀況給予適當的長照經費補助，針對偏鄉地區展開長照資源補強專案，擴展長期照顧服務設施，拉進城鄉差距。
         .col-3-content
           img.image.fade-in.delay-400ms src="/images/policies_image/geriatric_care/gc4_3.png"
+          h4.section-sub-title.fade-in.delay-600ms 錢從哪裡來？
           p.fade-in.delay-600ms 錢從哪裡來？指定稅收300億元+政府公務預算30億元，以公平合理為原則，指定稅收為主要財源。
 
   .section.gray-block
@@ -160,8 +166,8 @@
     .center-content
       .text-content
         h3.section-title 全面推動<br>「長照、托育、婦女就業」<br>三合一照顧政策從根源面對高齡化問題
-        p 「老有所終，幼有所托」是政府應該給人民最基本的安心生活。在民進黨上次執政時期，我們就已經看見高齡化將是國家重大的挑戰，我們訂出一套「長照十年」計劃，預計從2007年起，分十年編列817億的預算，為台灣的長照體系創造出服務供給。但是過去八年以來，長照計劃的預算規模只有原先規劃的三分之一，所訓練的居家服務員只有百分之十願意繼續留在職場，計畫延宕。
-        p 「長照十年2.0版」提出務實方案解決長照困境，刻不容緩。未來我們將在中央設置跨部門的「長期照顧推動小組」，整合各部門、各層級政府間的照顧事務，盡快達到便民、效率的目標。從根源面對高齡化問題，我們將進一步推動全面的「長照、托育、婦女就業三合一照顧政策」，來減輕家庭，尤其是家庭之中的女性，所承受的照顧重擔。
+        p 「老有所終，幼有所托」是政府應該給人民最基本的安心生活。在民進黨上次執政時期，我們就已經看見高齡化將是國家重大的挑戰，我們訂出一套「十年長照」計劃，預計從2007年起，分十年編列817億的預算，為台灣的長照體系創造出服務供給。但是過去八年以來，長照計劃的預算規模只有原先規劃的三分之一，所訓練的居家服務員只有百分之十願意繼續留在職場，計畫延宕。
+        p 「十年長照2.0版」提出務實方案解決長照困境，刻不容緩。未來我們將在中央設置跨部門的「長期照顧推動小組」，整合各部門、各層級政府間的照顧事務，盡快達到便民、效率的目標。從根源面對高齡化問題，我們將進一步推動全面的「長照、托育、婦女就業三合一照顧政策」，來減輕家庭所承受的照顧重擔。
         ol.todo-list.animation
           li.fade-in.delay-200ms
             h4.section-sub-title 長照
@@ -170,7 +176,7 @@
             h4.section-sub-title 托育
             p 推動讓<strong>家長付得起</strong>的<strong>普及公共托育服務</strong>，支持父母兼顧育兒和工作。
           li.fade-in.delay-600ms
-            h4.section-sub-title 婦女就業
+            h4.section-sub-title 女性就業
             p 以<strong>「女性充分就業」</strong>啟動良性循環。
       .figure.animation.fade-in
         img src="/images/policies_image/geriatric_care/gc6_1.png"
