--- a/policies/geriatric-care.html.slim
+++ b/policies/geriatric-care.html.slim
@@ -165,13 +165,13 @@
   .section
     .center-content
       .text-content
-        h3.section-title 全面推動<br>「長照、托育、婦女就業」<br>三合一照顧政策從根源面對高齡化問題
-        p 「老有所終，幼有所托」是政府應該給人民最基本的安心生活。在民進黨上次執政時期，我們就已經看見高齡化將是國家重大的挑戰，我們訂出一套「十年長照」計劃，預計從2007年起，分十年編列817億的預算，為台灣的長照體系創造出服務供給。但是過去八年以來，長照計劃的預算規模只有原先規劃的三分之一，所訓練的居家服務員只有百分之十願意繼續留在職場，計畫延宕。
+        h3.section-title 全面推動<br>「長照、托育、女性就業」<br>三合一照顧政策從根源面對高齡化問題
+        p 「老有所終，幼有所托」是政府應該給人民最基本的安心生活。在民進黨上次執政時期，我們就已經看見高齡化將是國家重大的挑戰，我們訂出一套「十年長照」計劃，預計從2007年起，分十年編列817億的預算，為台灣的長照體系創造出服務供給。但是過去八年以來，長照計劃的預算規模只有原先規劃的三分之一，所訓練的居家服務員僅20%留在職場，計畫延宕。
         p 「十年長照2.0版」提出務實方案解決長照困境，刻不容緩。未來我們將在中央設置跨部門的「長期照顧推動小組」，整合各部門、各層級政府間的照顧事務，盡快達到便民、效率的目標。從根源面對高齡化問題，我們將進一步推動全面的「長照、托育、婦女就業三合一照顧政策」，來減輕家庭所承受的照顧重擔。
         ol.todo-list.animation
           li.fade-in.delay-200ms
             h4.section-sub-title 長照
-            p 以「長照十年計畫2.0版」，推出<strong>付得起、用得上、溫馨而人性</strong>的長照服務。
+            p 以「十年長照計畫2.0版」，推出<strong>付得起、用得上、溫馨而人性</strong>的長照服務。
           li.fade-in.delay-400ms
             h4.section-sub-title 托育
             p 推動讓<strong>家長付得起</strong>的<strong>普及公共托育服務</strong>，支持父母兼顧育兒和工作。
