add san-serif ch font

--- a/sass/page/policies-page/_typekit.sass
+++ b/sass/page/policies-page/_typekit.sass
@@ -1,24 +1,24 @@
 %tk-shs-extralight
-  font-family: "source-han-sans-traditional",sans-serif
+  font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", "STHeitiTC-Light", "Microsoft JhengHei", sans-serif
   font-style: normal
   font-weight: 100
 
 %tk-shs-light
-  font-family: "source-han-sans-traditional",sans-serif
+  font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", "STHeitiTC-Light", "Microsoft JhengHei", sans-serif
   font-style: normal
   font-weight: 200
 
 %tk-shs-regular
-  font-family: "source-han-sans-traditional",sans-serif
+  font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", "STHeitiTC-Light", "Microsoft JhengHei", sans-serif
   font-style: normal
   font-weight: 400
 
 %tk-shs-bold
-  font-family: "source-han-sans-traditional",sans-serif
+  font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", "STHeitiTC-Light", "Microsoft JhengHei", sans-serif
   font-style: normal
   font-weight: 600
 
 %tk-shs-heavy
-  font-family: "source-han-sans-traditional",sans-serif
+  font-family: "source-han-sans-traditional", "Helvetica Neue", "Helvetica", "STHeitiTC-Light", "Microsoft JhengHei", sans-serif
   font-style: normal
   font-weight: 700
