policies page content update

--- a/_layout_javascript.html.slim
+++ b/_layout_javascript.html.slim
@@ -1,3 +1,4 @@
+<script>document.documentElement.className += ' wf-loading';</script>
 = javascript_include_tag \
   "//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js", \
   "/vendor/lazysizes.js", \
@@ -12,4 +13,5 @@
     "/vendor/d3.min.js", \
     "/vendor/prelude-browser-min.js", \
     "barchart", \
+    "linechart", \
     "chartdata"
