--- a/sass/page/policies-page/_chartstyle.sass
+++ b/sass/page/policies-page/_chartstyle.sass
@@ -1,3 +1,25 @@
 .world-old-people-data, .taiwan-old-people-data
   text
     fill: white
+
+.people-pp-chart
+  .line
+    float: left
+
+  .axis path, .axis line
+    fill: none
+    stroke: white
+    stroke-width: 1px
+    shape-rendering: crispEdges
+
+  .axis text
+    font-size: 18px
+    fill: white
+    shape-rendering: crispEdges
+
+  .number
+    font-size: 18px
+    fill: white
+
+
+
