wording style fix

--- a/policies/geriatric-care.html.slim
+++ b/policies/geriatric-care.html.slim
@@ -59,10 +59,10 @@
     .multi-col-content.old-people-chart
       .multi-col-content-inner
         .col-2-content
-          p 國際老年佔比
+          p.text-center 國際老年佔比
           .world-old-people-data
         .col-2-content
-          p 國內各鄉鎮老年佔比
+          p.text-center 國內各鄉鎮老年佔比
           .taiwan-old-people-data
     .center-content
       .text-content
@@ -73,10 +73,13 @@
     .multi-col-content.people-pp-chart
       .multi-col-content-inner
         .col-3-content
+          p.text-center 65 歲以上人口總佔比
           .line.people-ratio-data
         .col-3-content
+          p.text-center 平均年齡
           .line.people-average-data
         .col-3-content
+          p.text-center 總人口數
           .line.people-population-data
     .center-content
       .text-content
