--- a/sass/component/_pagination.scss
+++ b/sass/component/_pagination.scss
@@ -16,6 +16,7 @@ $pagination-disable-bg-color: transparent !default;
   list-style: none;
   .pagination-item {
     display: inline-block;
+    margin: 0 3px;
     width: 36px;
     text-align: center;
     @include adjust-font-size-to(15px);
