新增多國語系列表頁與其單一文章頁

--- a/sass/all.scss
+++ b/sass/all.scss
@@ -48,7 +48,7 @@
 @import "page/homepage";
 @import "page/policies-page";
 @import "page/article-page";
-// @import "page/global-page";
+@import "page/global-page";
 
 // ==== inbox ====
 .hide-phone {
