--- a/sass/partial/_page-bottom-illustrator.scss
+++ b/sass/partial/_page-bottom-illustrator.scss
@@ -1,22 +1,22 @@
 .page-bottom-illustrator {
 
   position: relative;
-  padding-bottom: 264px;
+  margin-top: 24px;
+  padding-bottom: 222px;
   overflow: hidden;
 
   &:before, &:after {
     content: '';
     position: absolute;
     bottom: 0;
-    margin-bottom: 48px;
+    margin-bottom: 24px;
     width: 100%;
     height: 0;
-    padding-bottom: 192px;
+    padding-bottom: 222px;
     background-repeat: no-repeat;
     background-position: bottom;
     @include background-size(cover);
   }
-
   &:before {
     left: -24px;
     background-image: url('/images/page-bottom-illustrator/left.png');
@@ -30,6 +30,7 @@
       padding-bottom: 240px;
       @include background-size(contain);
     }
+
     &:after {
       right: -24px;
       background-image: url('/images/page-bottom-illustrator/right.png');
