--- a/partial/_global-language.html.slim
+++ b/partial/_global-language.html.slim
@@ -1,10 +1,7 @@
-/ 提示目前頁面語系，有 CH、EN、ES、JP
-- @language = "TW"
+/ 多國語系下拉式選單
 
 .global-language.dropdown.right
   button.global-language-btn.dropdown-btn.dropdown-title.icon-global-light type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-    / 提示目前頁面語系
-    span.lang= @language
   ul.dropdown-menu aria-labelledby="dLabel"
     li.dropdown-item: a href="/" 繁體中文
     li.dropdown-item: a href="/global/" English
