--- a/partial/_header.html.slim
+++ b/partial/_header.html.slim
@@ -16,9 +16,9 @@
 
         .menu-bottom
           a.press-release href="/press/" 媒體專區
-          form.search
-            label.search-icon.icon-search
-            input.search-input placeholder="搜尋"
+          / form.search
+          /   label.search-icon.icon-search
+          /   input.search-input placeholder="搜尋"
           ul.social-nav
             li: a.facebook.icon-facebook href="#" target="_blank"
             li: a.instagra.icon-instagram href="#" target="_blank"
