--- a/global/show.html.slim
+++ b/global/show.html.slim
@@ -37,34 +37,34 @@
         a.post-share-btn.icon-plurk href="#" target="_blank"
         a.post-share-btn.icon-line href="#" target="_blank"
         / img.post-fb-like src="/images/fb-like.png"
-      / .pager
-      /   a.pager-item.prev href="#": .pager-title 上一篇
-      /   a.pager-item.pager-item_return href="#" 返回文章列表
-      /   a.pager-item.next href="#": .pager-title 下一篇
+      .pager
+        /   a.pager-item.prev href="#": .pager-title 上一篇
+        a.pager-item.pager-item_return href="#" 返回文章列表
+        /   a.pager-item.next href="#": .pager-title 下一篇
 
-  .aside-posts
-    .container.container_single-article
-      h3.aside-posts-title 相關文章
-      .aside-post-list
-        - 3.times do |i|
-          a.aside-post href="#"
-            .aside-post-img style="background-image: url('http://placehold.it/300x200')"
-            h4.aside-post-title= zh_lorem_sentence
-            .aside-post-meta
-              span.date 2015.7.22
-              ul.post-category
-                li.post-category-item: span 政策
-                // 若出現兩者以上議題的架構
+  / .aside-posts
+  /   .container.container_single-article
+  /     h3.aside-posts-title 相關文章
+  /     .aside-post-list
+  /       - 3.times do |i|
+  /         a.aside-post href="#"
+  /           .aside-post-img style="background-image: url('http://placehold.it/300x200')"
+  /           h4.aside-post-title= zh_lorem_sentence
+  /           .aside-post-meta
+  /             span.date 2015.7.22
+  /             ul.post-category
+  /               li.post-category-item: span 政策
+  /               // 若出現兩者以上議題的架構
                 / li.post-category-item: span 活動
                 / li.post-category-item: span 故事
 
-  .comments
-    .container.container_single-article
-      h3.comments-title 留言
-      .fb-comments data-href="http://iing.tw/" data-width="100%" data-numposts="5"
+  / .comments
+  /   .container.container_single-article
+  /     h3.comments-title 留言
+  /     .fb-comments data-href="http://iing.tw/" data-width="100%" data-numposts="5"
 
-  .banner-block
-    .container.container_single-article
-      = render :partial => "/partial/banner"
+  / .banner-block
+  /   .container.container_single-article
+  /     = render :partial => "/partial/banner"
 
 = render "/posts/fb-setting.erb"
