將多國語系頁專用 header 整合進共用 header

--- a/global/index.html.slim
+++ b/global/index.html.slim
@@ -1,6 +1,9 @@
 - @page_name = "global-page"
 
-= render '/global/header'
+/ 假設現在為英文語系
+- @language = "en"
+
+= render '/partial/header'
 
 .content
   .post-list.post-list_list-style
