在多國語言頁面時，使用 css 隱藏主導航與媒體專區連結

--- a/sass/page/_global-page.scss
+++ b/sass/page/_global-page.scss
@@ -1,5 +1,14 @@
 .global-page {
 
+  .header {
+    .primary-nav {
+      display: none;
+    }
+    .press-release {
+      display: none;
+    }
+  }
+
   .copy {
     text-align: center;
     @include adjust-font-size-to(13px);
